--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="./styles/styles.css" rel="stylesheet">
     <title>Portfolio</title>
@@ -13,19 +14,19 @@
   <body>
     <header class="global-header">
       <h3 class="logo-section"><a href="index.html"><span>Web</span>Studio</a></h3>
-      <nav class="nav-list">
-        <ul>
+      <section class="nav-list">
+        <nav>
           <li><a href="index.html">Studio</a></li>
           <li><a href="portfolio.html"><span>Portfolio</span></a></li>
           <li><a href="contacts.html">Contacts</a></li>
-        </ul>
-      </nav>
+        </nav>
+      </section>
       <a href="mailto:info@devstudio.com" class="mail-header">info@devstudio.com</a>
       <a href="tel:+12127724150" class="phone-header">+1 212-772-4150</a>
     </header>
     <main>
       <!--Filter section-->
-      <nav>
+      <section>
         <ul class="filter-buttons">
           <li><button type="button">All</button></li>
           <li><button type="button">Web-sites</button></li>
@@ -35,7 +36,7 @@
         </ul>
         <!--Selection indicator-->
         <!-- <span><img src="./assets/logo.svg" alt="Filter select logo" width="13" height="16"></span> -->
-      </nav>
+      </section>
       <!--Content section-->
       <section class="all-content">
         <ul>
